[package]
name = "moon-tui"
version = "0.1.0"
authors = ["Clemens Horn <me@clemenshorn.com>"]
edition = "2021"
license = "MIT"
description = "Terminal UI for browsing and running Moon workspace tasks"

[[bin]]
name = "moon-tui"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
libc = "0.2"
vt100 = "0.15"
